--- a/src/deb/data/usr/share/bayeos-server/conf/flyway.conf
+++ b/src/deb/data/usr/share/bayeos-server/conf/flyway.conf
@@ -2,3 +2,4 @@ flyway.url=${db.url}
 flyway.driver=org.postgresql.Driver
 flyway.user=${db.user}
 flyway.password=${db.password}
+flyway.table=schema_version
