--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.8</version>
+	<version>2.0.9</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -43,7 +43,7 @@
 		<server.contextPath>/XMLServlet</server.contextPath>
 		
 		<logging.level>INFO</logging.level>		
-		<logging.file>/var/log/bayeos-gateway.log</logging.file>
+		<logging.file>/var/log/bayeos/bayeos-server.log</logging.file>
 	</properties>
 
 	<profiles>
