--- a/src/deb/data/etc/systemd/system/bayeos-server.service
+++ b/src/deb/data/etc/systemd/system/bayeos-server.service
@@ -4,7 +4,7 @@ After=postgresql.service
 
 [Service]
 User=bayeos
-ExecStart=/usr/bin/java -Dlog4j.configuration=file:/etc/bayeos-server/log4j.properties -jar /var/lib/bayeos-server/bayeos-server.jar
+ExecStart=/usr/bin/java -Dlogback.configurationFile=file:/etc/bayeos-server/logback.xml -jar /var/lib/bayeos-server/bayeos-server.jar
 
 [Install]
 WantedBy=multi-user.target
