--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.9</version>
+	<version>2.0.10</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -30,8 +30,6 @@
 		<build.year>${maven.build.timestamp}</build.year>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
 		<maven.compiler.release>11</maven.compiler.release>
-
-		<jetty.version></jetty.version>
 
 		<db.user>bayeos</db.user>
 		<db.password>4336bc9de7a6b11940e897ee22956d51</db.password>
@@ -67,7 +65,7 @@
 								</goals>
 								<configuration>
 									<controlDir>${project.build.directory}/deb/control</controlDir>
-									<deb>${project.build.directory}/${project.artifactId}-${project.version}.deb</deb>
+									<deb>${project.build.directory}/${project.artifactId}-${project.version}+${release}.deb</deb>
 									<verbose>false</verbose>
 									<dataSet>
 										<data>
@@ -193,7 +191,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>2.7.0</version>
+			<version>2.9.0</version>
 		</dependency>
 
 		<dependency>
@@ -210,12 +208,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.11</version>			
+			<version>1.2.11</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.11</version>			
+			<version>1.2.11</version>
 		</dependency>
 
 	</dependencies>
