--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.13</version>
+	<version>2.1.0</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -24,20 +24,22 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<release>bullseye</release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<build.year>${maven.build.timestamp}</build.year>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
 		<maven.compiler.release>11</maven.compiler.release>
 
-		<db.user>bayeos</db.user>
+		<db.hostname>localhost</db.hostname>
+		<db.name>bayeos</db.name>
+		<db.username>bayeos</db.username>
 		<db.password>4336bc9de7a6b11940e897ee22956d51</db.password>
-		<db.url>jdbc:postgresql://localhost/bayeos</db.url>
 
+		<server.hostname>localhost</server.hostname>
 		<server.port>5532</server.port>
-		<server.timezone>GMT+1</server.timezone>
 		<server.contextPath>/XMLServlet</server.contextPath>
+		<api.timezone>GMT+1</api.timezone>
+		<api.key>01234567012345670123456701234567</api.key>
 
 	</properties>
 
@@ -65,7 +67,7 @@
 								</goals>
 								<configuration>
 									<controlDir>${project.build.directory}/deb/control</controlDir>
-									<deb>${project.build.directory}/${project.artifactId}-${project.version}+${release}.deb</deb>
+									<deb>${project.build.directory}/${project.artifactId}-${project.version}.deb</deb>
 									<verbose>false</verbose>
 									<dataSet>
 										<data>
@@ -173,7 +175,7 @@
 		<dependency>
 			<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 			<artifactId>bayeos-xmlrpc</artifactId>
-			<version>2.0.2</version>
+			<version>2.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -192,6 +194,32 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.6</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId> 
+			<version>0.12.6</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.9.0</version>
 		</dependency>
 
 		<dependency>
